--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "nodemailer": "^6.7.7",
+    "nodemon": "^2.0.19",
     "otp-generator": "^4.0.0",
     "twilio": "^3.80.0"
   }
