--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
     "otp-generator": "^4.0.0",
+    "socket.io": "^4.5.3",
     "twilio": "^3.80.0"
   }
 }
